main frame of the personal homepage

--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -9,8 +9,7 @@ layout: default
     <h1 class="post-title">{{ page.title }} {% if page.cv_pdf %}<a href="{{ page.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" class="float-right"><i class="fa-solid fa-file-pdf"></i></a>{% endif %}</h1>
       {% if page.description %}<p class="post-description">{{ page.description }}</p>{% endif %}
   </header>
-
-  <article>
+    <article>
     <div class="cv">
       {% for entry in site.data.cv %}
         <a class="anchor" id="{{ entry.title }}"></a>
@@ -91,8 +90,21 @@ layout: default
           </div>
         </div>
       {% endfor %}
-      </div>
+      </div>        
   </article>
-
 </div>
 {% endunless %}
+
+<!-- Social -->
+{%- if page.social %}
+<div class="social">
+  <div class="contact-icons">
+    {% include social.html %}
+  </div>
+
+  <div class="contact-note">
+    {{ site.contact_note }}
+  </div>
+
+</div>
+{%- endif %}
