--- a/_layouts/profiles.html
+++ b/_layouts/profiles.html
@@ -42,6 +42,20 @@ layout: page
 
           {% endfor %}
           {%- endif %}
+
+          <!-- Social -->
+          {%- if page.social %}
+            <div class="social">
+              <div class="contact-icons">
+                {% include social.html %}
+              </div>
+
+              <div class="contact-note">
+                {{ site.contact_note }}
+              </div>
+
+            </div>
+          {%- endif %}          
         </article>
 
 </div>
