updated the porto venere post

--- a/_layouts/activities.html
+++ b/_layouts/activities.html
@@ -32,4 +32,18 @@ layout: default
   {%- if site.giscus and page.giscus_comments -%}
     {% include giscus.html %}
   {%- endif -%}
+
+  <!-- Social -->
+  {%- if page.social %}
+  <div class="social">
+    <div class="contact-icons">
+      {% include social.html %}
+    </div>
+
+    <div class="contact-note">
+      {{ site.contact_note }}
+    </div>
+
+  </div>
+  {%- endif %}
 </div>
